Remove randomness altogether and include profile picture change as a private method in ruby.rb; fix footer z-index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -127,16 +127,17 @@ $navbar-default-bg: rgba(34, 34, 34, 1);
 	padding-bottom: 25px;
 }
 
-footer {
-	padding-top: 5px;
-	color: #aaa;
-}
-
 #footer {
+	z-index: 3;
 	position: fixed;
 	bottom: 0px;
 	margin: 0px;
 	width: 100%;
+}
+
+footer {
+	padding-top: 5px;
+	color: #aaa;
 }
 
 footer small {
